--- a/index.html
+++ b/index.html
@@ -11,32 +11,34 @@
 
 <body>
   <div class="hero">
-    <div class="badge">
-      <img src="images/badge.png" alt="badge">
-    </div>
-    <h1 class="titulo">
-      Curso de React.js
-    </h1>
-    <div class="description">
-      <p>React es una de las librerías más utilizadas hoy en día para crear aplicaciones web. En este curso podrás
-        dominar la
-        creación de aplicaciones a través de un proyecto que te ayudará a explotar todas las capacidades de esta
-        librería.</p>
-    </div>
-    <form action="" class="form">
-      <p>Registrate a Platzi</p>
-      <input type="text" placeholder="Nombre">
-      <input type="email" placeholder="Correo Electrónico">
-      <button type="submit">Comienza Ahora</button>
-    </form>
-    <div class="countdown">
-      <p>Lanzamiento:</p>
-      <p>
-        <span>01d</span>
-        <span>03h</span>
-        <span>09m</span>
-        <span>05s</span>
-      </p>
+    <div class="hero-container">
+      <div class="badge">
+        <img src="images/badge.png" alt="badge">
+      </div>
+      <h1 class="titulo">
+        Curso de React.js
+      </h1>
+      <div class="description">
+        <p>React es una de las librerías más utilizadas hoy en día para crear aplicaciones web. En este curso podrás
+          dominar la
+          creación de aplicaciones a través de un proyecto que te ayudará a explotar todas las capacidades de esta
+          librería.</p>
+      </div>
+      <form action="" class="form">
+        <p>Registrate a Platzi</p>
+        <input type="text" placeholder="Nombre">
+        <input type="email" placeholder="Correo Electrónico">
+        <button type="submit">Comienza Ahora</button>
+      </form>
+      <div class="countdown">
+        <p>Lanzamiento:</p>
+        <p>
+          <span>01d</span>
+          <span>03h</span>
+          <span>09m</span>
+          <span>05s</span>
+        </p>
+      </div>
     </div>
   </div>
 </body>
